fixed layout issue. show scancode symbols from layouts

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -27,14 +27,16 @@
 }
 .key {
   text-align: center;
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
   display: inline-block;
   border: 1px solid #000;
   margin:5px;
   font-size: 12px;
 }
-
+.wrap {
+  display: inline-block;
+}
 .separador {
   width: 60px;
   display: inline-block;  
